<resources>
    <string name="app_name">SilkWay</string>
    <!-- Strings related to login -->
    <string name="email">Email</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="remember_me">remember me</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="delete_account">Delete Account</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account">Don\'t have an account? </string>
    <string name="new_customer_create_your_account">New Customer? <font color='#008CFF'>Create Your Account</font></string>
    <string name="_silk_way_developer">2023 SilkWay app by Efimov Daniil</string>
    <string name="eight_characters">passwords must be at least 8 characters</string>
    <string name="create_your_account">Create your account</string>
    <string name="sign_in_already_a_customer">Sign-in. Already a customer?</string>
    <string name="boldText">Sign-in.</string>
    <string name="normalText">" "Already a customer?</string>
    <string name="enter_at_least_3_characters">Enter at least 3 characters</string>
    <string name="email_required">Email Required</string>
    <string name="enter_a_valid_email_address">Enter a valid email address</string>
    <string name="password_required">Password Required</string>
    <string name="password__at_least_8_characters">Password should be at least 8 characters</string>

    <!-- Strings related to forgot password activity -->
    <string name="forgot_password">Forgot password</string>
    <string name="forgot_password_question">Forgot password?</string>
    <string name="forgot_description">Fill in the mail field by writing your mail in it and receive an email with a link to restore your account</string>
    <string name="forgot_get_mail">Get Mail</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings related to catalog details activity -->
    <string name="example_description1">A unique multifunctional tool will replace as many as 15 hair care products for you. Light cream spray PERFECT HAIR 15 in 1 has amazing properties: it perfectly moisturizes and nourishes the hair, gives smoothness, returns softness, eliminates the effect of fluffiness, facilitates combing, prevents hair section, restores damage, has thermal protection, facilitates styling and protects the color of dyed hair, enhancing their brightness. This irreplaceable product saturates the hair with keratin, seals the hair, has an antioxidant effect, increases their elasticity and returns the natural volume and unsurpassed shine and strength to the hair. Just one tool will make your hair truly perfect! How to use: apply to washed and towel-dried hair in the required amount (depending on their length, condition and porosity). Distribute the product with a comb along the entire length, including the tips. Without washing off, start styling your hair.</string>

    <string name="param_name"><font fcolor="red">Name:</font> %1$s</string>
    <string name="param_category"><font color='silkway_red'>Category:</font> %1$s</string>
    <string name="param_price"><font color='silkway_red'>Price per piece:</font> %1$d %2$s</string>
    <string name="param_current_amount_requests"><font color='silkway_red'>Number of requests currently:</font> %1$d</string>
    <string name="param_min_amount_requests"><font color='silkway_red'>Minimum quantity of purchased goods:</font> %1$d</string>
    <string name="title_activity_requests">RequestsActivity</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_wishlist">WishlistActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
</resources>